--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,11 @@
 body{
   width: 80%;
   margin: 0 auto;
+  font-family: sans-serif;
 }
 header{
-  background-color: #e579e6;
-  height: 60px;
+  height: 110px;
+  text-transform: uppercase;
 }
 footer{
   background-color: #8801fe;
@@ -60,5 +61,25 @@ footer{
 .structure-contain div:not(.header){
   height: 410px;
 }
-
 /* end structure */
+.principal-logo{
+  height: 60px;
+}
+.header-logo{
+  height: 100%;
+  border-right: 1px solid #dcdcdc;
+  padding-right: 15px;
+}
+nav{
+  margin-top: 20px;
+}
+nav a{
+  text-decoration: none;
+  color: #595959;
+}
+nav li{
+  display: inline;
+  list-style: none;
+  margin-right: 10px;
+  font-size: 0.9rem;
+}
