--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,14 @@ footer{
   margin-top: 5px;
 }
 .first-contain{
-  height: 300px;
-  background-color: #e1d67a;
   margin-top: 20px;
+  height: 400px;
+  border-radius: 10px;
+  background-image: url(../img/banner.jpg);
+  background-size: 90%;
+  background-position: 50%;
+  color: white;  
+  position: relative;
 }
 .structure-contain{
   margin-top: 20px;
@@ -82,4 +87,15 @@ nav li{
   list-style: none;
   margin-right: 10px;
   font-size: 0.9rem;
+}
+.first-title{
+  position: absolute;
+  left: 40px;
+  bottom: 40px;
+  width: 45%;
+  text-transform: capitalize;
+}
+.transparency{
+  background-color: rgba(22, 22, 22, 0.3);
+  height: 100%;
 }
